--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,8 @@ pytest==7.4.0
 flask-sqlalchemy==3.0.5
 flask-migrate==4.0.5
 flask-login==0.6.2
-psycopg2-binary==2.9.7
 python-dateutil==2.8.2
 gunicorn==21.2.0
 Werkzeug==2.3.7
+requests>=2.28.0
+assemblyai>=0.13.0
