--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,5 @@ gunicorn==21.2.0
 Werkzeug==2.3.7
 requests>=2.28.0
 assemblyai>=0.13.0
+spacy==3.6.1
+https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.6.0/en_core_web_sm-3.6.0.tar.gz#egg=en_core_web_sm
